--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/Demi-Ajayi" target="_blank">Demi Ajayi</a> and is
+          <a href="https://github.com/Demi-Ajayi/ops-challenge" target="_blank"> on GitHub</a> and
+          <a href="https://spontaneous-snickerdoodle-df6eb9.netlify.app/" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
     </div>
